<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/title_dialog_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/save_title"
                android:layout_width="@dimen/control_button_width"
                android:layout_height="wrap_content"
                android:onClick="dialogClickHandler"
                android:text="@string/save_text" >
            </Button>

            <Button
                android:id="@+id/dismiss_title"
                android:layout_width="@dimen/control_button_width"
                android:layout_height="wrap_content"
                android:onClick="dialogClickHandler"
                android:text="@string/dismiss_text" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>